--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "standard --env mocha && mocha"
+    "test": "jscs -p airbnb */*.js && mocha"
   },
   "repository": {
     "type": "git",
@@ -30,12 +30,9 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
-    "eslint": "^3.19.0",
-    "eslint-config-standard": "^10.2.0",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
     "expect.js": "^0.3.1",
-    "mocha": "^3.2.0",
-    "standard": "^10.0.1"
+    "jscs": "^3.0.7",
+    "jscs-jsdoc": "^2.0.0",
+    "mocha": "^3.2.0"
   }
 }
