--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "jscs -p airbnb */*.js && mocha"
+    "test": "eslint . --ext .js && mocha"
   },
   "repository": {
     "type": "git",
@@ -30,9 +30,11 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.1.3",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsdoc": "^3.0.0",
     "expect.js": "^0.3.1",
-    "jscs": "^3.0.7",
-    "jscs-jsdoc": "^2.0.0",
     "mocha": "^3.2.0"
   }
 }
